@@ -56,6 +56,7 @@ public:
     void openJsonDatabase(const QString &filePath);
     void openRecentDatabase(const QAction *action);
     void openBranchDb();
+    void importBranch();
     void _makeDbContentsList();
 
     void resetDatabase(); // reopening and reparsing current database
